<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation,MissingTranslation">
	<string name="about">About</string>
	<string name="add_app">add app</string>
	<string name="add_app_description">Here you can add a new app</string>
	<string name="adding_template_failed_s">Adding template %s failed</string>
	<string name="afh_returned_code_s_with_message">AFH returned code %s with message</string>
	<string name="app_detail_description">Here you can see the details of the selected app</string>
	<string name="app_details">App details</string>
	<string name="app_is_already_installed">App is already installed</string>
	<string name="app_name" translatable="false">Appdate</string>
	<string name="app_up_to_date">App is already up-to-date</string>
	<string name="available_version">available version</string>
	<string name="cache_file">cache file</string>
	<string name="can_install_app_ss">Appdate can install the app %s.\nThe available version is %s</string>
	<string name="check_for_updates">check for updates</string>
	<string name="could_not_upload_templates">Could not upload templates</string>
	<string name="delete">delete</string>
	<string name="download">download</string>
	<string name="download_failed_s">Download of app %s failed</string>
	<string name="download_success">Download of app %s succeeded</string>
	<string name="fetching_templates_failed">Fetching templates failed</string>
	<string name="fetching_templates_timed_out">Fetching templates timed out</string>
	<string name="fetching_updates_failed">Fetching updates failed</string>
	<string name="fetching_updates_failed_s">Fetching updates failed for the app %s</string>
	<string name="fetching_updates_timed_out">Fetching updates timed out</string>
	<string name="found_update_sss">Appdate has found an update for the app %s.\nThe installed Version is %s.\nThe available version is %s</string>
	<string name="install">install</string>
	<string name="install_failed_s">Installing app %s failed</string>
	<string name="install_not_permitted">App installation not permitted</string>
	<string name="install_success_s">Installing app %s succeeded</string>
	<string name="installed_version">installed version</string>
	<string name="invalid_URL_could_not_add_app">URL is not valid. App could not be added.</string>
	<string name="json_parsing_failed">json parsing failed</string>
	<string name="last_updated">last updated</string>
	<string name="licenses">Licenses</string>
	<string name="name">name</string>
	<string name="name_should_be_empty">The name should not be empty</string>
	<string name="no_network_found_try_later">No network connection found. Please try again later</string>
	<string name="no_releases_found">No releases found</string>
	<string name="no_releases_found_for_app_s">No releases found for the app %s</string>
	<string name="no_releases_found_for_app_under_fid_sd">No releases found for the app %s under fid %d</string>
	<string name="no_version_in_s">No version in %s</string>
	<string name="request_read_packages">Please grant permission to read installed packages</string>
	<string name="s_is_null">%s is null</string>
	<string name="settings">Settings</string>
	<string name="success">Success</string>
	<string name="test_config">test config</string>
	<string name="test_failed">"Test failed"</string>
	<string name="test_successful_app_has_version_s">Test successful! The app has the version %s</string>
	<string name="update_available">Update available</string>
	<string name="update_failed">App update failed</string>
	<string name="update_for_s">Update for %s</string>
	<string name="updateUrl">URL</string>
	<string name="url_should_not_be_empty">The URL should not be empty</string>
	<string name="version">version</string>
	<string name="waiter_timed_out_waiting_to_be_woken_seconds_f">Waiter timed out waiting to be woken (%f seconds)</string>
	<string name="waiting_for_timed_out_sd">Timed out waiting for %s (%ds)</string>
</resources>
