<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/nav_graph"
	app:startDestination="@id/nav_appOverview"
	>
	<fragment
		android:id="@+id/nav_appOverview"
		android:name="de.binarynoise.appdate.AppOverviewFragment"
		android:label="@string/app_name"
		tools:layout="@layout/app_overview_fragment"
		>
		<action
			android:id="@+id/to_appDetail"
			app:destination="@id/nav_appDetail"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			/>
		<action
			android:id="@+id/to_addApp"
			app:destination="@id/nav_addApp"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			/>
		<action
			android:id="@+id/to_settings"
			app:destination="@id/nav_settings"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			/>
		<action
			android:id="@+id/to_aboutFragment"
			app:destination="@id/nav_aboutFragment"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			/>
	</fragment>
	<fragment
		android:id="@+id/nav_appDetail"
		android:name="de.binarynoise.appdate.AppDetailFragment"
		android:label="@string/app_details"
		tools:layout="@layout/app_detail_fragment"
		>
		<argument
			android:name="id"
			app:argType="integer"
			/>
	</fragment>
	<fragment
		android:id="@+id/nav_settings"
		android:name="de.binarynoise.appdate.PreferencesFragment"
		android:label="@string/settings"
		>
		<action
			android:id="@+id/to_aboutFragment"
			app:destination="@id/nav_aboutFragment"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			/>
		<action
			android:id="@+id/action_nav_settings_to_nav_pref_licenses"
			app:destination="@id/nav_licenses"
			/>
	</fragment>
	<fragment
		android:id="@+id/nav_addApp"
		android:name="de.binarynoise.appdate.AddAppFragment"
		android:label="@string/add_app"
		tools:layout="@layout/add_app_fragment"
		/>
	<fragment
		android:id="@+id/nav_licenses"
		android:name="de.binarynoise.appdate.LicensesFragment"
		android:label="@string/licenses"
		tools:layout="@layout/licenses_fragment"
		/>
	<fragment
		android:id="@+id/nav_aboutFragment"
		android:name="de.binarynoise.appdate.AboutFragment"
		android:label="@string/about"
		tools:layout="@layout/about_fragment"
		>
		<action
			android:id="@+id/to_licenses"
			app:destination="@id/nav_licenses"
			app:enterAnim="@anim/nav_default_enter_anim"
			app:exitAnim="@anim/nav_default_exit_anim"
			app:launchSingleTop="true"
			app:popEnterAnim="@anim/nav_default_pop_enter_anim"
			app:popExitAnim="@anim/nav_default_pop_exit_anim"
			/>
	</fragment>
</navigation>
