<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_height="match_parent"
	android:layout_width="match_parent"
	tools:context=".NavHostActivity"
	tools:ignore="ContentDescription,HardcodedText,SelectableText,RtlSymmetry"
	>
	
	<LinearLayout
		android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:orientation="vertical"
		>
		
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			>
			
			<ImageView
				android:id="@+id/icon"
				android:adjustViewBounds="true"
				android:layout_height="48dp"
				android:layout_margin="8dp"
				android:layout_width="48dp"
				app:srcCompat="@android:color/transparent"
				tools:srcCompat="@tools:sample/avatars"
				/>
			
			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_marginBottom="8dp"
				android:layout_marginEnd="8dp"
				android:layout_marginTop="8dp"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:orientation="vertical"
				>
				
				<TextView
					android:layout_height="wrap_content"
					android:layout_marginBottom="3dp"
					android:layout_width="match_parent"
					android:text="@string/app_detail_description"
					/>
				
				<TableLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					>
					
					<TableRow
						android:layout_height="match_parent"
						android:layout_marginBottom="3dp"
						android:layout_width="match_parent"
						>
						
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/name"
							/>
						
						<TextView
							android:id="@+id/name"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:paddingStart="8dp"
							android:text="Appdate"
							/>
					</TableRow>
					
					<TableRow
						android:layout_height="match_parent"
						android:layout_marginBottom="3dp"
						android:layout_width="match_parent"
						>
						
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/installed_version"
							/>
						
						<TextView
							android:id="@+id/installedVersion"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:paddingStart="8dp"
							android:text="TextView"
							/>
					</TableRow>
					
					<TableRow
						android:layout_height="match_parent"
						android:layout_marginBottom="3dp"
						android:layout_width="match_parent"
						>
						
						<TextView
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:text="@string/available_version"
							/>
						
						<TextView
							android:id="@+id/availableVersion"
							android:layout_height="wrap_content"
							android:layout_width="wrap_content"
							android:paddingStart="8dp"
							android:text="TextView"
							/>
					</TableRow>
				</TableLayout>
			
			</LinearLayout>
		</LinearLayout>
		
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_margin="8dp"
			android:layout_width="match_parent"
			android:baselineAligned="false"
			>
			
			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:padding="4dp"
				>
				
				<ImageButton
					android:id="@+id/updateButton"
					style="?attr/buttonBarButtonStyle"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:src="@drawable/ic_update_white_24dp"
					android:tint="@color/foreground"
					tools:ignore="ContentDescription"
					/>
				
				<ProgressBar
					android:id="@+id/updateButton_progressBar"
					android:indeterminateOnly="true"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:visibility="invisible"
					tools:visibility="visible"
					/>
				
				<TextView
					android:ellipsize="none"
					android:layout_below="@id/updateButton"
					android:layout_centerHorizontal="true"
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="@string/check_for_updates"
					android:textAlignment="center"
					/>
			</RelativeLayout>
			
			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:padding="4dp"
				>
				
				<ImageButton
					android:id="@+id/downloadButton"
					style="?attr/buttonBarButtonStyle"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:src="@drawable/ic_file_download_white_24dp"
					android:tint="@color/foreground"
					tools:ignore="ContentDescription"
					/>
				
				<ProgressBar
					android:id="@+id/downloadButton_progressBar"
					style="@style/Widget.MaterialProgressBar.ProgressBar"
					android:indeterminate="true"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:visibility="invisible"
					tools:visibility="visible"
					/>
				
				<TextView
					android:ellipsize="none"
					android:layout_below="@id/downloadButton"
					android:layout_centerHorizontal="true"
					android:layout_height="match_parent"
					android:layout_width="wrap_content"
					android:text="@string/download"
					android:textAlignment="center"
					/>
			</RelativeLayout>
			
			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:padding="4dp"
				>
				
				<ImageButton
					android:id="@+id/installButton"
					style="?attr/buttonBarButtonStyle"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:src="@drawable/ic_install_update_white_24dp"
					android:tint="@color/foreground"
					tools:ignore="ContentDescription"
					/>
				
				<ProgressBar
					android:id="@+id/installButton_progressBar"
					android:indeterminateOnly="true"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:visibility="invisible"
					tools:visibility="visible"
					/>
				
				<TextView
					android:ellipsize="none"
					android:layout_below="@id/installButton"
					android:layout_centerHorizontal="true"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/install"
					android:textAlignment="center"
					/>
			</RelativeLayout>
			
			<RelativeLayout
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:padding="4dp"
				>
				
				<ImageButton
					android:id="@+id/deleteButton"
					style="?attr/buttonBarButtonStyle"
					android:layout_centerHorizontal="true"
					android:layout_height="24dp"
					android:layout_width="24dp"
					android:src="@drawable/ic_delete_white_24dp"
					android:tint="@color/foreground"
					tools:ignore="ContentDescription"
					/>
				
				<TextView
					android:ellipsize="none"
					android:layout_below="@id/deleteButton"
					android:layout_centerHorizontal="true"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
					android:text="@string/delete"
					android:textAlignment="center"
					/>
			</RelativeLayout>
		</LinearLayout>
		
		
		
		<HorizontalScrollView
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			>
			
			<TextView
				android:id="@+id/debugView"
				android:layout_height="wrap_content"
				android:layout_margin="8dp"
				android:layout_width="wrap_content"
				android:text="{\n\tJSON\n}"
				android:visibility="gone"
				tools:visibility="visible"
				/>
		</HorizontalScrollView>
	</LinearLayout>
</ScrollView>

